--- a/index.html
+++ b/index.html
@@ -1,7 +1,165 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>The Gentleman's Lounge Barbershop</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="images/logo.png" />
+		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+	</head>
 	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+		<div class="bg-black p-3">
+			<section class="homepage-bg-image">
+				<div class="container">
+					<h1 class="text-center text-bg-light">
+						The Gentleman's Lounge Barbershop
+					</h1>
+					<hr />
+					<img src="images/logo.png" class="rounded" alt="Logo" />
+					<hr />
+					<button type="button" class="btn btn-light btn-lg">
+						Book Appointment
+					</button>
+				</div>
+			</section>
+			<hr />
+			<h2 class="text-white">Services</h2>
+			<div class="row">
+				<div class="col-sm-8">
+					<table class="table table-dark table-borderless">
+						<tbody>
+							<tr>
+								<td>
+									Haircut (13+) - Standard men's harcuit, which includes buzz
+									cuts, fades, and trims
+								</td>
+								<td>$30</td>
+								<td>
+									Haircut (12 & under) - Same as Haircut (13+), but for the
+									young gents
+								</td>
+								<td>$24</td>
+							</tr>
+							<tr>
+								<td>Beard - Facial hair trims and shaping</td>
+								<td>$20</td>
+								<td>
+									Haircut and Beard - Combo haircut and beard service for a
+									lower price
+								</td>
+								<td>$42</td>
+							</tr>
+							<tr>
+								<td>
+									Head Hair Dye - Hair dye treatment for hair on the scalp
+								</td>
+								<td>$32</td>
+								<td>Beard Hair Dye - Hair dye treatment for facial hair</td>
+								<td>$25</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div class="col-sm-4">
+					<img
+						src="images/haircut.jpg"
+						class="rounded img-fluid"
+						alt="Haircut"
+					/>
+				</div>
+			</div>
+			<section class="barbers-bg-image">
+				<h2 class="text-white text-center">Our Barbers</h2>
+				<div class="row">
+					<div class="col-sm-6 d-flex justify-content-center">
+						<div class="card" style="width: 400px">
+							<img
+								src="images/Alex.jpg"
+								class="card-img-top"
+								alt="Alex profile"
+							/>
+							<div class="card-body">
+								<h4 class="card-title">Alex</h4>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 d-flex justify-content-center">
+						<div class="card" style="width: 400px">
+							<img
+								src="images/Taz.jpg"
+								class="card-img-top"
+								alt="Taz profile"
+							/>
+							<div class="card-body">
+								<h4 class="card-title">Taz</h4>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-6 d-flex justify-content-center">
+						<div class="card" style="width: 400px">
+							<img
+								src="images/Jacob.jpg"
+								class="card-img-top"
+								alt="Jacob profile"
+							/>
+							<div class="card-body">
+								<h4 class="card-title">Jacob</h4>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 d-flex justify-content-center">
+						<div class="card" style="width: 400px">
+							<img
+								src="images/Anthony.jpg"
+								class="card-img-top"
+								alt="Anthony profile"
+							/>
+							<div class="card-body">
+								<h4 class="card-title">Anthony</h4>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<div class="text-white">
+				<div class="row">
+					<div class="col-sm-6">
+						<h2>Location</h2>
+					</div>
+					<div class="col-sm-6">
+						<h2>Location Hours</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-6">
+						<img src="images/address.png" class="rounded" />
+						<p>75 Laurier Avenue East, Ottawa, ON</p>
+					</div>
+					<div class="col-sm-6">
+						<p>Monday to Friday</p>
+						<p>9:00 AM - 7:00 PM</p>
+						<hr />
+						<p>Saturday</p>
+						<p>10:00 AM - 7:00 PM</p>
+						<hr />
+						<p>Sunday</p>
+						<p>10:00 AM - 6:00 PM</p>
+						<hr />
+						<h2>Contact</h2>
+						<p>Phone Number:</p>
+						<p>613-123-4567</p>
+						<p>Email:</p>
+						<p>info.tglb@gmail.com</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
