--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/logo.png" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-    </head>
+	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
 			<div class="container-fluid">
@@ -34,13 +40,19 @@
 							<a class="nav-link text-center" href="#barbers">Our Barbers</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-center" href="#location">Location & Contact</a>
+							<a class="nav-link text-center" href="#location"
+								>Location & Contact</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-center" href="#booking">Book Appointment</a>
+							<a class="nav-link text-center" href="#booking"
+								>Book Appointment</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-center" href="#cancel">Cancel Appointment</a>
+							<a class="nav-link text-center" href="#cancel"
+								>Cancel Appointment</a
+							>
 						</li>
 					</ul>
 				</div>
@@ -49,13 +61,17 @@
 		<div class="bg-black p-3">
 			<section class="homepage-bg-image" id="home">
 				<div class="container">
-					<h1 class="text-center text-white text-bg-dark">
-						The Gentleman's Lounge Barbershop
-					</h1>
+					<div class="mx-auto text-white text-bg-dark" style="width: 60%">
+						<h1>The Gentleman's Lounge Barbershop</h1>
+					</div>
 					<br />
 					<img src="images/logo.png" class="rounded" alt="Logo" />
 					<hr />
-					<button type="button" class="btn btn-dark btn-lg" onclick="location.href='#book'">
+					<button
+						type="button"
+						class="btn btn-dark btn-lg"
+						onclick="location.href='#book'"
+					>
 						Book Appointment
 					</button>
 				</div>
@@ -120,7 +136,9 @@
 			</div>
 			<br />
 			<section class="barbers-bg-image" id="barbers">
-				<h2 class="text-center text-white text-bg-dark">Our Barbers</h2>
+				<div class="mx-auto text-white text-bg-dark" style="width: 25%">
+					<h2>Our Barbers</h2>
+				</div>
 				<br />
 				<div class="row">
 					<div class="col-sm-6 d-flex justify-content-center">
@@ -175,7 +193,7 @@
 					</div>
 				</div>
 			</section>
-			<div class="text-white" id="location">
+			<div class="ms-5 text-white" id="location">
 				<br />
 				<br />
 				<br />
@@ -233,7 +251,6 @@
 								<input type="time" class="form-control" id="appEndTime" />
 							</div>
 						</div>
-
 					</div>
 					<div class="row">
 						<div class="col-sm-6">
@@ -275,14 +292,22 @@
 						<div class="col-sm-6">
 							<h5>Email</h5>
 							<div class="input-group mb-3">
-								<input type="text" class="form-control" id="email"/>
+								<input type="text" class="form-control" id="email" />
 							</div>
 						</div>
 					</div>
 					<br />
 					<div class="col-sm-12 text-center">
-						<p>*Note: Each service appointment takes 30 minutes, but you can book more than one appointment at once by adding 30 minutes (between start and end time) for every other appointment you want to book.</p>
-						<button type="button" class="btn btn-secondary" onclick="bookConfirm()">
+						<p>
+							*Note: Each service appointment takes 30 minutes, but you can book
+							more than one appointment at once by adding 30 minutes (between
+							start and end time) for every other appointment you want to book.
+						</p>
+						<button
+							type="button"
+							class="btn btn-secondary"
+							onclick="bookConfirm()"
+						>
 							Confirm Appointment Booking
 						</button>
 					</div>
@@ -300,7 +325,7 @@
 							<div class="mb-3">
 								<h5>Date:</h5>
 								<div id="confAppDate"></div>
-							</div>						
+							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="mb-3">
@@ -320,7 +345,7 @@
 							<div class="mb-3">
 								<h5>Service:</h5>
 								<div id="confAppService"></div>
-							</div>	
+							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="mb-3">
@@ -336,7 +361,11 @@
 						</div>
 					</div>
 					<div class="col-sm-12 text-center">
-						<button type="button" class="btn btn-secondary" onclick="bookConfirm()">
+						<button
+							type="button"
+							class="btn btn-secondary"
+							onclick="bookConfirm()"
+						>
 							Book Another Appointment
 						</button>
 					</div>
@@ -345,14 +374,20 @@
 
 			<div class="text-white active" id="cancel">
 				<section class="book-cancel-bg-image">
+					<br />
+					<br />
 					<h2>Cancel An Appointment</h2>
 					<br />
 					<h5>Appointment Number:</h5>
 					<form class="d-flex">
 						<div class="input-group mb-3">
-							<input type="text" class="form-control me-2" id="appNumber"/>
+							<input type="text" class="form-control me-2" id="appNumber" />
 						</div>
-						<button type="button" class="btn btn-secondary" onclick="cancelConfirm()">
+						<button
+							type="button"
+							class="btn btn-secondary"
+							onclick="cancelConfirm()"
+						>
 							Cancel Appointment
 						</button>
 					</form>
@@ -370,75 +405,78 @@
 							<div class="mb-3">
 								<h5>Appointment Cancelled:</h5>
 								<div class="mb-3" id="appNumberCancelled"></div>
-								<button type="button" class="btn btn-secondary" onclick="cancelConfirm()">
+								<button
+									type="button"
+									class="btn btn-secondary"
+									onclick="cancelConfirm()"
+								>
 									Cancel Another Appointment
 								</button>
 							</div>
-						</div>	
+						</div>
 					</div>
 				</section>
 			</div>
-		</div>
 		<script>
 			function bookConfirm() {
-				var book = document.getElementById('book');
-				var bookConfirmed = document.getElementById('bookConfirmed');
+				var book = document.getElementById("book");
+				var bookConfirmed = document.getElementById("bookConfirmed");
 
-				if (book.classList.contains('active')) {
-					var appDate = document.getElementById('appDate').value;
-					var appStartTime = document.getElementById('appStartTime').value;
-					var appEndTime = document.getElementById('appEndTime').value;
-					var service = document.getElementById('appService').value;
-					var barber = document.getElementById('appBarber').value;
+				if (book.classList.contains("active")) {
+					var appDate = document.getElementById("appDate").value;
+					var appStartTime = document.getElementById("appStartTime").value;
+					var appEndTime = document.getElementById("appEndTime").value;
+					var service = document.getElementById("appService").value;
+					var barber = document.getElementById("appBarber").value;
 
-					document.getElementById('confAppDate').textContent = appDate;
-					document.getElementById('confAppStartTime').textContent = appStartTime;
-					document.getElementById('confAppEndTime').textContent = appEndTime;
-					document.getElementById('confAppService').textContent = service;
-					document.getElementById('confAppBarber').textContent = barber;
+					document.getElementById("confAppDate").textContent = appDate;
+					document.getElementById("confAppStartTime").textContent =
+						appStartTime;
+					document.getElementById("confAppEndTime").textContent = appEndTime;
+					document.getElementById("confAppService").textContent = service;
+					document.getElementById("confAppBarber").textContent = barber;
 
-					book.classList.remove('active');
-					book.classList.add('inactive');
-					bookConfirmed.classList.remove('inactive');
-					bookConfirmed.classList.add('active');
-
+					book.classList.remove("active");
+					book.classList.add("inactive");
+					bookConfirmed.classList.remove("inactive");
+					bookConfirmed.classList.add("active");
 				} else {
-					document.getElementById('appDate').value = '';
-					document.getElementById('appStartTime').value = '';
-					document.getElementById('appEndTime').value = '';
-					document.getElementById('appService').value = 'Haircut (13+)';
-					document.getElementById('appBarber').value = 'Alex';
-					
-					bookConfirmed.classList.remove('active');
-					bookConfirmed.classList.add('inactive');
-					book.classList.remove('inactive');
-					book.classList.add('active');
+					document.getElementById("appDate").value = "";
+					document.getElementById("appStartTime").value = "";
+					document.getElementById("appEndTime").value = "";
+					document.getElementById("appService").value = "Haircut (13+)";
+					document.getElementById("appBarber").value = "Alex";
+					document.getElementById("firstName").value = "";
+					document.getElementById("lastName").value = "";
+					document.getElementById("email").value = "";
 
+					bookConfirmed.classList.remove("active");
+					bookConfirmed.classList.add("inactive");
+					book.classList.remove("inactive");
+					book.classList.add("active");
 				}
 			}
 
 			function cancelConfirm() {
-				var cancel = document.getElementById('cancel');
-				var cancelConfirmed = document.getElementById('cancelConfirmed');
+				var cancel = document.getElementById("cancel");
+				var cancelConfirmed = document.getElementById("cancelConfirmed");
 
-				if (cancel.classList.contains('active')) {
-					var appNumber = document.getElementById('appNumber').value;
+				if (cancel.classList.contains("active")) {
+					var appNumber = document.getElementById("appNumber").value;
 
-					document.getElementById('appNumberCancelled').textContent = appNumber;
+					document.getElementById("appNumberCancelled").textContent = appNumber;
 
-					cancel.classList.remove('active');
-					cancel.classList.add('inactive');
-					cancelConfirmed.classList.remove('inactive');
-					cancelConfirmed.classList.add('active');
-
+					cancel.classList.remove("active");
+					cancel.classList.add("inactive");
+					cancelConfirmed.classList.remove("inactive");
+					cancelConfirmed.classList.add("active");
 				} else {
-					document.getElementById('appNumber').value = '';
-					
-					cancelConfirmed.classList.remove('active');
-					cancelConfirmed.classList.add('inactive');
-					cancel.classList.remove('inactive');
-					cancel.classList.add('active');
+					document.getElementById("appNumber").value = "";
 
+					cancelConfirmed.classList.remove("active");
+					cancelConfirmed.classList.add("inactive");
+					cancel.classList.remove("inactive");
+					cancel.classList.add("active");
 				}
 			}
 		</script>
